# docs/swagger.yaml
@@ -704,6 +704,8 @@ definitions:
         type: array
       id:
         type: string
+      max_students:
+        type: integer
       monthly_price:
         type: integer
       name:
@@ -1271,6 +1273,20 @@ definitions:
       tahun_masuk:
         maxLength: 10
         type: string
+    type: object
+  http.UpdateSubscriptionRequest:
+    properties:
+      cycle:
+        enum:
+        - month
+        - year
+        - onetime
+        type: string
+      plan_id:
+        type: string
+    required:
+    - cycle
+    - plan_id
     type: object
   http.UpdateTeacherRequest:
     properties:
@@ -3174,6 +3190,77 @@ paths:
       security:
       - BearerAuth: []
       summary: Get school subscription
+      tags:
+      - schools
+    put:
+      consumes:
+      - application/json
+      description: Replaces the active subscription for a school. Superadmin only.
+      parameters:
+      - description: School UUID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Subscription update
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/http.UpdateSubscriptionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/http.SubscriptionResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - BearerAuth: []
+      summary: Change school subscription
+      tags:
+      - schools
+  /schools/plans:
+    get:
+      description: Returns the active pricing plans available for school subscriptions.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/http.PlanResponse'
+                  type: array
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - BearerAuth: []
+      summary: List subscription plans
       tags:
       - schools
   /staff:
